--- a/package.json
+++ b/package.json
@@ -1,16 +1,8 @@
 {
   "name": "fortune-cookie-generator",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
   "dependencies": {
-    "@google/generative-ai": "^1.0.0",
-    "express": "^4.17.1",
-    "dotenv": "^16.0.3"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "start": "node index.js"
-  },
-  "author": "",
-  "license": "ISC"
+    "@google/generative-ai": "^1.0.0"
+  }
 }
