--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
-  "name": "fortune-cookie-generator",
-  "version": "1.0.0",
-  "type": "module",
-  "dependencies": {
-    "@google/generative-ai": "^1.0.0"
+    "name": "fortune-cookie-generator",
+    "version": "1.0.0",
+    "type": "module",
+    "scripts": {
+      "start": "node server.js",
+      "dev": "nodemon server.js"
+    },
+    "dependencies": {
+      "dotenv": "^16.0.3",
+      "express": "^4.18.2"
+    },
+    "devDependencies": {
+      "nodemon": "^2.0.22"
+    }
   }
-}
