--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,22 @@
     "version": 2,
     "builds": [
       {
-        "src": "api/generate-fortune.js",
+        "src": "server.js",
         "use": "@vercel/node"
+      },
+      {
+        "src": "public/**",
+        "use": "@vercel/static"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/api/(.*)",
+        "dest": "server.js"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "public/$1"
       }
     ]
   }
